--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@eslint/eslintrc": "^3.1.0",
 		"@eslint/js": "^9.9.0",
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -24,5 +26,8 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"react-dom": "^18.3.1"
 	}
 }
