--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.1.0",
 		"@eslint/js": "^9.9.0",
+		"@tsconfig/svelte": "^5.0.4",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"esbuild-svelte": "^0.8.1",
 		"globals": "^15.9.0",
 		"node-fetch": "latest",
 		"obsidian": "latest",
+		"svelte": "^4.2.19",
+		"svelte-preprocess": "^6.0.2",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5"
 	}
 }
