--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"svelte": "^4.2.19",
 		"svelte-preprocess": "^6.0.2",
 		"tslib": "2.4.0",
-		"typescript": "^5"
+		"typescript": "^5",
+		"@acgabbert/obsidian-utils": "latest"
 	}
 }
