--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"svelte-preprocess": "^6.0.2",
 		"tslib": "2.4.0",
 		"typescript": "^5",
-		"@acgabbert/obsidian-utils": "latest"
+		"@acgabbert/obsidian-utils": "latest",
+		"obsidian-svelte-components": "latest"
 	}
 }
